--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,6 +3,10 @@
     justify-content: space-around;
 }
 
+.nav_title {
+    color: rgb(202, 15, 77);
+}
+
 .links_list {
     display: flex;
     gap: 3rem;
@@ -11,4 +15,9 @@
 
 .links_list a {
     text-decoration: none;
+    color: black;
+}
+
+.links_list a:hover {
+    color: rgb(202, 15, 77);
 }
