--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -6,12 +6,6 @@
   background-color: rgb(202, 15, 77);
   color: #fff;
   min-height: 85vh;
-  padding: 2% 10% 2% 10%;
-  display: flex;
-  justify-content: space-evenly;
-  background-color: rgb(202, 15, 77);
-  color: #fff;
-  min-height: 85vh;
   padding: 2% 0% 2% 0%;
 }
 
@@ -23,7 +17,7 @@
   height: 100%;
   padding: 20px;
   border-radius: 20px;
-  box-shadow: 15px 15px 20px rgba(0,0,0,0.3);
+  box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.3);
 }
 
 .parent {
@@ -35,11 +29,10 @@
   position: relative;
   grid-column: span 4;
   user-select: none;
-  overflow: none;
   height: 50px;
   text-align: end;
   line-height: 50px;
-  box-shadow: inset 4px 4px 10px rgba(0,0,0,0.1);
+  box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   margin-bottom: 10px;
   padding: 5%;
@@ -59,13 +52,13 @@ button {
   font-family: 'Poppins', sans-serif;
   font-size: 1.1rem;
   background-color: #fff;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   color: black;
   border: none;
 }
 
 button:active {
-  box-shadow: inset 2px 2px 6px rgba(0,0,0,0.1);
+  box-shadow: inset 2px 2px 6px rgba(0, 0, 0, 0.1);
 }
 
 .plus {
