--- a/src/components/calculator.css
+++ b/src/components/calculator.css
@@ -29,6 +29,7 @@
   position: relative;
   grid-column: span 4;
   user-select: none;
+  width: 400px;
   height: 50px;
   text-align: end;
   line-height: 50px;
